2005-05-14  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/boards/chess.c: (start_board), (start_child): cleanup. do not work as expected on widows yet
	* src/boards/chess_position.h: cleanup
	* src/gcompris/assetml.c: (dump_asset), (parse_doc),
	(assetml_load_xml), (assetml_get_asset): added traces
	* src/gcompris/gameutil.c: (gcompris_find_absolute_filename): cleanup
	* src/gcompris/soundutil.c: (scheduler), (thread_play_ogg),
	(gcompris_play_ogg), (gcompris_play_ogg_list): fixed memory leaks for windows. reviewed the
	whole code of this function.

2005-05-13  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/gnumch-inequality.xml.in: fixed string
	* configure.in: removed CFLAGS=
	* src/boards/chess.c: (start_board), (end_board),
	(chess_next_level), (chess_destroy_all_items), (chess_create_item),
	(hightlight_possible_moves), (item_event_black),
	(engine_local_destroy), (engine_local_cb), (start_child): code cleanup
	* src/gcompris/gcompris.c: (init_background), (gcompris_exit): fixed core dump on exits due to xrandr

2005-05-10  Bruno coudoin  <bruno.coudoin@free.fr>

	Added many files needed for the windows side of the world, including
	installer files. I copied these files from gaim and adapted them for gcompris.
	fixed gletters not to crash anymore on windows.
	
	* boards/gnumch-equality.xml.in:
	* boards/gnumch-factors.xml.in:
	* boards/gnumch-inequality.xml.in:
	* boards/gnumch-multiples.xml.in:
	* boards/gnumch-primes.xml.in:
	* gcompris-uninstal.ico:
	* nsis/gcompris-header.bmp:
	* nsis/gcompris-intro.bmp:
	* nsis/langmacros.nsh:
	* nsis/translations/albanian.nsh:
	* nsis/translations/bulgarian.nsh:
	* nsis/translations/catalan.nsh:
	* nsis/translations/czech.nsh:
	* nsis/translations/danish.nsh:
	* nsis/translations/dutch.nsh:
	* nsis/translations/english.nsh:
	* nsis/translations/finnish.nsh:
	* nsis/translations/french.nsh:
	* nsis/translations/german.nsh:
	* nsis/translations/hebrew.nsh:
	* nsis/translations/hungarian.nsh: