@@ -113,6 +113,7 @@ BOARDS_C_SRC =	\
 	clickgame.c \
 	clockgame.c \
 	colors.c \
+	draw.c \
 	erase.c \
 	enumerate.c \
 	fifteen.c \
